<resources>
    <!-- Menu -->
    <string name="app_name">FlashLab</string>
    <string name="bloodTest">Аналіз крові</string>
    <string name="trainer">Тренажер</string>
    <string name="simpleTest">Тест</string>
    <string name="patientDB">Архів</string>

    <!-- FormFragment -->
    <string name="firstTab">АНКЕТА</string>
    <string name="selectGender">Будь ласка, оберіть стать:</string>
    <string name="male">Чоловік</string>
    <string name="female">Жінка</string>
    <string name="confirm">Підтвердити</string>
    <string name="clear">Очистити</string>

    <!-- Blood's names -->
    <string name="hb"> HB   (Гемоглобін)</string>
    <string name="rbc">RBC (Еритроцити)</string>
    <string name="mchc">MCHC (Кольоровий  показник)</string>
    <string name="rtc">RTC (Ретикулоцити)</string>
    <string name="plt">PLT (Тромбоцити)</string>
    <string name="esr">ESR (ШОЕ)</string>
    <string name="wbc">WBC (Лейкоцити)</string>
    <string name="eos">EOS (Еозинофіли)</string>
    <string name="bas">BAS (Базофіли)</string>
    <string name="lym">LYM (Лімфоцити)</string>
    <string name="mon">MON (Моноцити)</string>

    <!-- HistoryFragment -->
    <string name="secondTab">ІСТОРІЯ</string>

    <!-- TabMenu -->
    <string name="sortByDate">Дата</string>
    <string name="sortByStatus">Статус</string>

    <!-- ResultActivity -->
    <string name="delete">Видалити</string>
    <string name="edit">Редагувати</string>
    <string name="transmit">Перенести</string>
    <string name="title_activity_dase">DaseActivity</string>
    <string name="title_activity_patient_base">PatientBaseActivity</string>
    <string name="title_activity_patient">PatientActivity</string>
    <string name="title_activity_archive">ArchiveActivity</string>


    <!--Add Activity -->
    <string name="birthDate">Дата народження</string>
    <string name="address">Адреса</string>
    <string name="history">Історія хвороби</string>
    <string name="title_activity_result_base">ResultBaseActivity</string>

    <!--Diseases' names-->
    <string name="dehydration">Зневоднення</string>
    <string name="bloodClotting">Згущення крові</string>
    <string name="vitaminsStomach">Недостаток вітамінів та проблеми з шлунком</string>
    <string name="anemia">Анемія</string>
    <string name="moles">Новоутворення</string>
    <string name="kidneys">Захворювання нирок</string>
    <string name="hemorrhage">Крововтрата</string>
    <string name="leukemia">Лейкоз</string>
    <string name="virus">Вірусне захворювання</string>
    <string name="autoimmune">Ауто-імунні захворювання</string>
    <string name="liver">Захворювання печінки</string>
    <string name="typhus">Тиф</string>
    <string name="title_activity_maps">Map</string>

    <!--Map-->
    <string name="pharmacies">Знайти найближчі аптеки</string>


    <!--MedicinesActivity-->
    <string name="warning">УВАГА! Данна программа є лише бета-версією. Самолікування може бути шкідливим для
    Вашого здоров'я. Перед придбанням певних препаратів проконсультуйтесь з лікарем!</string>
    <string name="medicines">Ліки</string>
    <string name="map">Де я можу придбати ці препарати?</string>
</resources>
