<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".domain.TrainerActivity">

    <TextView
        android:id="@+id/textViewSelectGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/selectGender"
        android:textSize="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="@dimen/dp_10"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioSexGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="15dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="361dp"
        android:layout_height="32dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:layout_marginLeft="15dp"
        android:text="Створити аналіз"
        android:textColor="@color/white"
        android:background="@color/colorRed"
        android:textSize="10dp"/>

    <TextView
        android:id="@+id/textViewBloodValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/radioSexGroup"
        android:layout_marginTop="124dp"
        android:text="" />

    <RadioGroup
        android:id="@+id/diseasesGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/radioSexGroup"
        android:layout_marginBottom="52dp">

        <RadioButton
            android:id="@+id/radioButtonDehydration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dehydration" />

        <RadioButton
            android:id="@+id/radioButtonBloodClotting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bloodClotting" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonDiseaseConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/radioSexGroup"
        android:text="@string/confirm" />

</RelativeLayout>