<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".domain.MainActivity">

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="470dp"
        android:layout_centerInParent="true"
        android:background="@drawable/round_shape_layout"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="199dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/blood" />

        <Button
            style="@style/Button"
            android:id="@+id/buttonBloodTestActivity"
            android:layout_marginTop="10dp"
            android:text="@string/bloodTest" />

        <Button
            style="@style/Button"
            android:id="@+id/buttonTrainerActivity"
            android:layout_marginTop="10dp"
            android:text="@string/trainer" />

        <Button
            style="@style/Button"
            android:id="@+id/buttonSimpleTestActivity"
            android:layout_marginTop="10dp"
            android:text="@string/simpleTest" />

    </LinearLayout>
</RelativeLayout>