<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".domain.archive.AddPatientActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="Ім'я"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/dataBirthEdit"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/name"
            android:layout_marginLeft="5dp"
            android:ems="10"
            android:hint="@string/birthDate"
            android:inputType="datetime"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/addressEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/dataBirth"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="text" />

        <EditText

            android:id="@+id/historyEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:autoLink="all"
            android:gravity="top|left"
            android:hint="@string/history"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="20"
            android:maxLength="10000"
            android:minLines="1"
            android:scrollbars="none" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">


        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/addBtn"

        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="18dp"
        android:background="@color/colorRed"
        android:text="@string/confirm"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/clearBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/addBtn"
        android:layout_marginEnd="15dp"
        android:background="@color/colorRed"
        android:text="@string/clear"
        android:textColor="@color/white" />

</RelativeLayout>